@@ -26,20 +26,20 @@ lua:
 	make -C $(LUADIR) mingw CC="$(CC)" AR="$(AR)" RANLIB="$(RANLIB)"
 
 # package -- doesn't really work as such, so don't use!
-lua-akfavatar.dll: lua-akfavatar.wo lua-akfavatar-rc.o libavtaddons.a
-	$(CC) -O -shared -o $@ lua-akfavatar.wo lua-akfavatar-rc.o \
+lua-akfavatar.dll: lua-avt.wo lua-akfavatar-rc.o libavtaddons.a
+	$(CC) -O -shared -o $@ lua-avt.wo lua-akfavatar-rc.o \
 	  -L. -lavtaddons -lakfavatar  $(LDFLAGS) $(LUA_LDFLAGS) -mwindows
 
 # starter
-lua-akfavatar.exe: lua-akfavatar-prg.wo lua-akfavatar.wo luaavtstarter-rc.o \
+lua-akfavatar.exe: lua-akfavatar-prg.wo lua-avt.wo luaavtstarter-rc.o \
 		libavtaddons.a
-	$(CC) -o $@ lua-akfavatar-prg.wo lua-akfavatar.wo luaavtstarter-rc.o \
+	$(CC) -o $@ lua-akfavatar-prg.wo lua-avt.wo luaavtstarter-rc.o \
 	    -L. -lavtaddons -lakfavatar \
 	    $(LUA_LDFLAGS) $(SDL_LDFLAGS) $(LDFLAGS)
 
-lua-akfavatar.wo: $(srcdir)/lua/lua-akfavatar.c
+lua-avt.wo: $(srcdir)/lua/lua-avt.c
 	$(CC) $(CFLAGS) $(SDL_CFLAGS) $(LUA_CFLAGS) -I$(srcdir) -c -o $@ \
-	  $(srcdir)/lua/lua-akfavatar.c
+	  $(srcdir)/lua/lua-avt.c
 
 lua-akfavatar-prg.wo: $(srcdir)/lua/lua-akfavatar-prg.c
 	$(CC) $(CFLAGS) $(LUA_CFLAGS) $(SDL_CFLAGS) -I$(srcdir) -c -o $@ \
